More style edits

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,8 +8,8 @@
 */
 
 :root {
-	--maincolor: #2b3c52;
-	--maincolor-light: #40597a;
+	--maincolor: #426bad;
+	--maincolor-light: #8296ae;
 }
 
 html, body, div, span, applet, object,
