Minor Style Edits

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,8 +8,8 @@
 */
 
 :root {
-	--maincolor: #426bad;
-	--maincolor-light: #8296ae;
+	--maincolor: #43669e;
+	--maincolor-light: #728eb0;
 }
 
 html, body, div, span, applet, object,
