--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -973,6 +973,22 @@ input, select, textarea {
 							padding-top: 3em;
 						}
 
+				/* Responsive Iframe Containers */
+				.responsive-iframe-container {
+					position: relative;
+					overflow: hidden;
+					padding-top: 56.25%; /* 16:9 Aspect Ratio */
+					width: 100%; /* Full width */
+				}
+
+				.responsive-iframe-container iframe {
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+				}	
+
 		}
 
 		@media screen and (max-width: 1024px) {
@@ -1218,6 +1234,21 @@ input, select, textarea {
 							padding-top: 3em;
 						}
 
+			/* Responsive Iframe Containers */
+			.responsive-iframe-container {
+				position: relative;
+				overflow: hidden;
+				padding-top: 56.25%; /* 16:9 Aspect Ratio */
+				width: 100%; /* Full width */
+			}
+
+			.responsive-iframe-container iframe {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+			}	
 		}
 
 		@media screen and (max-width: 736px) {
@@ -3320,5 +3351,6 @@ input, select, textarea {
 			.button {
 				padding: 0;
 			}
+			
 
 	}
